--- a/cssDeneme.css.html
+++ b/cssDeneme.css.html
@@ -10,7 +10,7 @@
 <body>
     <p style="color: aqua;">MERHABA CSS</p>
     <P>
-        <span style="color:cornflowerblue">CSS</span>
+        <span style="color:rgb(5, 28, 71)">CSS</span>
         <span style="color:darkcyan">deneme basladi</span>
     </P>
 </body>
@@ -26,9 +26,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p style="color: aqua;">MERHABA CSS</p>
+    <p style="color: rgb(255, 55, 0);">MERHABA CSS</p>
     <P>
-        <span style="color:cornflowerblue">CSS</span>
+        <span style="color:rgb(5, 28, 71)">CSS</span>
         <span style="color:darkcyan">deneme 2 basladi</span>
     </P>
 </body>
@@ -44,9 +44,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p style="color: aqua;">MERHABA CSS</p>
+    <p style="color: rgb(0, 255, 26);">MERHABA CSS</p>
     <P>
-        <span style="color:cornflowerblue">CSS</span>
+        <span style="color:rgb(5, 28, 71)">CSS</span>
         <span style="color:darkcyan">deneme 3 basladi</span>
     </P>
 </body>
