--- a/branchCSS3.css.html
+++ b/branchCSS3.css.html
@@ -8,10 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <p style="color: rgb(238, 0, 255);">BRANCH CSS 2</p>
+    <p style="color: rgb(0, 30, 255);">BRANCH CSS 3</p>
     <P>
         <span style="color:cornflowerblue">CSS</span>
-        <span style="color:darkcyan">2.banch uzerine calisiliyor</span>
+        <span style="color:darkcyan">3. branch uzerine calisiliyor.</span>
     </P>
 </body>
 </html>
